package bwl.oo.paket3;

public class Fachschaft extends Klassen {
    public Fachschaft(){
        klasse = "Fachschaft";
        instanzVariablenBeschriftung.add("Name");
    }

}














